--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ build/
 *.perspectivev3
 *.mode1v3
 *.mode2v3
+Desktop Viewer/NSLogger.xcodeproj/project.xcworkspace/xcuserdata/ds.xcuserdatad
+Desktop Viewer/NSLogger.xcodeproj/xcuserdata/ds.xcuserdatad
+Desktop Viewer/Third Party/BWToolkit/BWToolkit.xcodeproj/xcuserdata/ds.xcuserdatad
